solve overflow issue

--- a/static/Games/players.css
+++ b/static/Games/players.css
@@ -35,6 +35,7 @@ button:hover {
 }
 #playerName{
   width: 45%;
+  height: 2em;
   margin-right: 10px;
   /* color: brown; */
 }
@@ -59,7 +60,12 @@ body {
   width: 40rem;
   padding: 30px;
   height: 65vh;
-  overflow: auto;
+  overflow: hidden;
+}
+
+.playerList{
+  overflow-y:scroll;
+  max-height: 20em;
 }
 
 .img-cont {
@@ -89,6 +95,7 @@ body {
 
 .form-list-container {
   margin-top: 15px;
+
 }
 
 form {
@@ -100,9 +107,12 @@ form {
 } */
 
 .playerCard {
-  width: 18rem;
-  margin: auto;
+  max-width: 25rem;
+  max-height: 12rem;
+  margin: auto; 
+  overflow: hidden;
 }
+
 .color-border {
   height: 2vh;
   width: 100%;
